--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jahid-Hasan Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div>
+            <h1>Welcome To</h1>
+            <h1> <span class="color">Jahid Hasan</span> World</h1>
+            <h3>Front End Web Developer and SQA Engineer</h3>
+            <p>
+                In spring 2021 I graduated with a bachelor’s degree in computer science from the Daffodil International
+                University.I'm looking for work now that I've finished my degree.My innate interest in front end
+                development.I
+                have done some of my project in web.As a fron-end developer i have ability to build any site front
+                part.I
+                have
+                also knowledge in SQA.I have done some of my project in manual testing.I have skills also in Graphics
+                Design.Now
+                i am looking for job that i will use my skills also learn new things.
+            </p>
+        </div>
+        <div>
+            <img src="images/jahid-bg.png"">
+        </div>
+    </section>
 </body>
 </html>
