--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <section>
-        <div>
+    <section class="top-banner">
+        <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="color">Jahid Hasan</span> World</h1>
             <h3>Front End Web Developer and SQA Engineer</h3>
@@ -29,8 +29,9 @@
                 Design.Now
                 i am looking for job that i will use my skills also learn new things.
             </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahidhasan88/">Hire Me</a>
         </div>
-        <div>
+        <div class="half-width">
             <img src="images/jahid-bg.png"">
         </div>
     </section>
