second-section added

--- a/index.html
+++ b/index.html
@@ -35,5 +35,29 @@
             <img src="images/jahid-bg.png"">
         </div>
     </section>
+    <section class=" second-section">
+            <div class="half-width">
+                <img src="showOff/my-bg2 - Copy.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1>
+                    Project Details
+                </h1>
+                <h3>
+                    web Developer and SQA Engineer
+                </h3>
+                <p>
+                    Product shipping system: product shipping sytem is a currier base system.There you can send
+                    product also receive any kinds of product.You can send product inside and outside Bangladesh.You can
+                    track your order,That whre is your perecel right now.Customer can easily use this currier
+                    system.It's user friendly
+                </p>
+                <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahidhasan88/">Download
+                    Resume</a>
+
+            </div>
+
+    </section>
 </body>
+
 </html>
