style,border,footer added

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-area ">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="color">Jahid Hasan</span> World</h1>
             <h3>Front End Web Developer and SQA Engineer</h3>
-            <p>
+            <p class="align">
                 In spring 2021 I graduated with a bachelor’s degree in computer science from the Daffodil International
                 University.I'm looking for work now that I've finished my degree.My innate interest in front end
                 development.I
@@ -35,29 +35,68 @@
             <img src="images/jahid-bg.png"">
         </div>
     </section>
-    <section class=" second-section">
-            <div class="half-width">
-                <img src="showOff/my-bg2 - Copy.png" alt="">
-            </div>
-            <div class="half-width">
-                <h1>
-                    Project Details
-                </h1>
-                <h3>
-                    web Developer and SQA Engineer
-                </h3>
-                <p>
-                    Product shipping system: product shipping sytem is a currier base system.There you can send
-                    product also receive any kinds of product.You can send product inside and outside Bangladesh.You can
-                    track your order,That whre is your perecel right now.Customer can easily use this currier
-                    system.It's user friendly
-                </p>
-                <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahidhasan88/">Download
-                    Resume</a>
+    <section class=" second-section flexible-area ">
+            <div class=" half-width">
+            <img src="showOff/my-bg2 - Copy.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>
+                Project Details
+            </h1>
+            <h3>
+                web Developer and SQA Engineer
+            </h3>
+            <p class="align">
+                Product shipping system: product shipping sytem is a currier base system.There you can send
+                product also receive any kinds of product.You can send product inside and outside Bangladesh.You can
+                track your order,That whre is your perecel right now.Customer can easily use this currier
+                system.It's user friendly
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahidhasan88/">Download
+                Resume</a>
 
-            </div>
+        </div>
 
     </section>
+    <section class="experience-area">
+        <h1>
+            Experiences
+        </h1>
+        <div class="flexible-area">
+            <div id="web" class="experience">
+                <h2>
+                    Front End web Developer
+                </h2>
+                <h3 class="color">
+                    2022-present | Level 1 Developer
+                </h3>
+                <p>
+                    During my University level i have experience on web development.My final year project also web
+                    development project.I used PHP,javascript, nodejs.Also i have done some project with html, css,
+                    bootstrap.Currently i am working Deeply with web development.
+                </p>
+            </div>
+            <div id="sqa" class="experience">
+                <h2>
+                    SQA Engineer
+                </h2>
+                <h3 class="color">
+                    2021-Present | level 20 Tester Engineer
+                </h3>
+                <p>
+                    In 2021 i started sqa as a manual tester.After that i have learn jira tool,automation testing.I have
+                    done some project in manual testing.I have test Foodpanda, Daraj, Hungry naki.Currenty i am working
+                    as a
+                    automation tester.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p>
+        Md Jahid Hasan | Journey to the Web Developer @ 2022
+    </p>
+</footer>
 
 </html>
